// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with back button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#66D9F0",
        "flex": 1,
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/images/landscape.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": -20,
          "height": 175,
          "position": "absolute",
        },
        Object {
          "left": -0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "flex-start",
          "alignSelf": "flex-start",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 18,
              },
              Object {
                "margin": 20,
                "marginTop": 40,
              },
            ],
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingBottom": 25,
            "paddingHorizontal": 30,
            "paddingTop": 45,
            "textAlign": "center",
            "width": 650,
          },
        ]
      }
    >
      Which stage best describes where Test is on their journey?
    </Text>
  </View>
</View>
`;

exports[`renders correctly without back button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#66D9F0",
        "flex": 1,
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../assets/images/landscape.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": -20,
          "height": 175,
          "position": "absolute",
        },
        Object {
          "left": -0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 18,
            "fontWeight": "500",
            "paddingBottom": 25,
            "paddingHorizontal": 30,
            "paddingTop": 45,
            "textAlign": "center",
            "width": 650,
          },
        ]
      }
    >
      Which stage best describes where Test is on their journey?
    </Text>
  </View>
</View>
`;

